--- a/.gitignore
+++ b/.gitignore
@@ -61,6 +61,7 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+
 # Flask stuff:
 instance/
 .webassets-cache
@@ -109,6 +110,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+VENV/
 
 # Spyder project settings
 .spyderproject
@@ -128,3 +130,6 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# Database stuff
+*.sqlite
