--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,8 @@ Flask==1.1.2
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+mpy-cross==1.12
 numpy==1.19.2
-pkg-resources==0.0.0
 pyftdi==0.52.0
 pyserial==3.4
 pyusb==1.1.0
