--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ adafruit-circuitpython-rfm9x==2.0.4
 Adafruit-PlatformDetect==2.18.0
 Adafruit-PureIO==1.1.6
 click==7.1.2
+digi-xbee==1.3.0
 dill==0.3.2
 Flask==1.1.2
 itsdangerous==1.1.0
@@ -19,6 +20,7 @@ pyserial==3.4
 pyusb==1.1.0
 rpi-ws281x==4.2.4
 RPi.GPIO==0.7.0
+six==1.15.0
+srp==1.0.16
 sysv-ipc==1.0.1
 Werkzeug==1.0.1
-digi-xbee==1.3.0
