--- a/battlefield.service
+++ b/battlefield.service
@@ -2,6 +2,7 @@
 Description=Battlefield Init Service
 
 [Service]
+User=pi
 WorkingDirectory=/home/pi/Coding/battlefield/
 ExecStart=/home/pi/Coding/battlefield/venv/bin/python main.py
 StandardOutput=inherit
