--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ adafruit-circuitpython-pn532==2.3.0
 adafruit-circuitpython-rfm9x==2.0.4
 Adafruit-PlatformDetect==2.18.0
 Adafruit-PureIO==1.1.6
+beautifulsoup4==4.9.3
+bs4==0.0.1
 click==7.1.2
 digi-xbee==1.3.0
 dill==0.3.2
@@ -21,6 +23,8 @@ pyusb==1.1.0
 rpi-ws281x==4.2.4
 RPi.GPIO==0.7.0
 six==1.15.0
+soupsieve==2.1
 srp==1.0.16
 sysv-ipc==1.0.1
 Werkzeug==1.0.1
+WTForms==2.3.3
