--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,21 @@
-Adafruit-Blinka==5.5.1
-adafruit-circuitpython-busdevice==5.0.1
-adafruit-circuitpython-framebuf==1.4.3
-adafruit-circuitpython-gps==3.6.5
-adafruit-circuitpython-pn532==2.3.0
-adafruit-circuitpython-rfm9x==2.0.4
-Adafruit-PlatformDetect==2.18.0
-Adafruit-PureIO==1.1.6
 beautifulsoup4==4.9.3
 bs4==0.0.1
 click==7.1.2
-digi-xbee==1.3.0
 dill==0.3.2
 Flask==1.1.2
+Flask-SQLAlchemy==2.4.4
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
-mpy-cross==1.12
 numpy==1.19.2
+psycopg2-binary==2.8.6
 pyftdi==0.52.0
 pyserial==3.4
 pyusb==1.1.0
-rpi-ws281x==4.2.4
-RPi.GPIO==0.7.0
 six==1.15.0
 soupsieve==2.1
+SQLAlchemy==1.3.22
 srp==1.0.16
 sysv-ipc==1.0.1
 Werkzeug==1.0.1
