--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.5.4
 beautifulsoup4==4.9.3
 bs4==0.0.1
 click==7.1.2
@@ -6,15 +7,21 @@ dnspython==2.1.0
 email-validator==1.1.2
 Flask==1.1.2
 Flask-Login==0.5.0
+Flask-Migrate==2.6.0
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
 idna==3.1
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Mako==1.1.4
 MarkupSafe==1.1.1
+pkg-resources==0.0.0
 psycopg2==2.8.6
 pyserial==3.5
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+python-editor==1.0.4
 six==1.15.0
 soupsieve==2.1
 SQLAlchemy==1.3.22
