--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,6 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 Mako==1.1.4
 MarkupSafe==1.1.1
-pkg-resources==0.0.0
 psycopg2==2.8.6
 pyserial==3.5
 python-dateutil==2.8.1
@@ -28,3 +27,4 @@ SQLAlchemy==1.3.22
 srp==1.0.16
 Werkzeug==1.0.1
 WTForms==2.3.3
+gunicorn==20.0.4
