--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ certifi==2020.12.5
 chardet==4.0.0
 click==7.1.2
 digi-xbee==1.3.0
-dnspython==1.16.0
+dnspython==2.1.0
 email-validator==1.1.2
 eventlet==0.30.2
 Flask==1.1.2
@@ -26,6 +26,7 @@ Jinja2==2.11.2
 Mako==1.1.4
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
+PyJWT==2.0.1
 pyserial==3.5
 python-dateutil==2.8.1
 python-dotenv==0.15.0
