--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ dnspython==2.1.0
 email-validator==1.1.2
 eventlet==0.30.2
 Flask==1.1.2
+Flask-Cors==3.0.10
 Flask-Login==0.5.0
 Flask-Migrate==2.6.0
 Flask-Script==2.0.6
