--- a/angular.json
+++ b/angular.json
@@ -5,6 +5,7 @@
   "projects": {
     "skirmesh-ui": {
       "projectType": "application",
+      "serve": { "options" : { "port" : 5001 } },
       "schematics": {
         "@schematics/angular:component": {
           "style": "scss"
@@ -27,7 +28,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ 
+            "styles": [
               "src/styles.scss"
             ],
             "scripts": []
@@ -90,7 +91,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ 
+            "styles": [
               "src/styles.scss"
             ],
             "scripts": []
