--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --port 5000",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -15,9 +16,9 @@
     "@angular/animations": "~11.2.4",
     "@angular/cdk": "^11.2.6",
     "@angular/common": "~11.2.4",
+    "@angular/cli": "~11.2.3",
     "@angular/compiler": "~11.2.4",
     "@angular/compiler-cli": "~11.2.4",
-    "@angular/cli": "~11.2.3",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
     "@angular/platform-browser": "~11.2.4",
@@ -32,7 +33,8 @@
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3"
+    "zone.js": "~0.11.3",
+    "typescript": "~4.1.5"
   },
   "devDependencies": {
     "@types/jasmine": "~3.6.0",
@@ -48,6 +50,9 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.1.5"
-  }
+  },
+  "engines": {
+    "node": "6.11.0",
+    "npm": "3.10.10"
+}
 }
