--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
   },
-  "engines": {
+  /* "engines": {
     "node": "6.11.0",
     "npm": "3.10.10"
-}
+} */
 }
