--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build --prod"
+    "heroku-postbuild": "ng build --prod",
+  },
+  "engines": {
+      "node": "14.x",
+      "npm": "6.x"
   },
   "private": true,
   "dependencies": {
