--- a/package.json
+++ b/package.json
@@ -8,21 +8,15 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "heroku-postbuild": "ng build"
-  },
-  "engines": {
-      "node": "14.x",
-      "npm": "6.x"
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
-    "@angular-devkit/build-angular": "^0.1102.7",
     "@angular/animations": "~11.2.4",
     "@angular/cdk": "^11.2.6",
-    "@angular/common": "~11.2.4",
     "@angular/cli": "~11.2.3",
+    "@angular/common": "~11.2.4",
     "@angular/compiler": "~11.2.4",
-    "@angular/compiler-cli": "~11.2.4",
     "@angular/core": "~11.2.4",
     "@angular/forms": "~11.2.4",
     "@angular/platform-browser": "~11.2.4",
@@ -32,15 +26,17 @@
     "@types/socket.io-client": "^1.4.36",
     "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.6.0",
     "ngx-socket-io": "3.2.0",
     "rxjs": "~6.6.0",
     "socket.io-client": "^4.0.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.3",
-    "typescript": "~4.1.5"
+    "zone.js": "~0.11.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^0.1102.7",
+    "@angular/compiler-cli": "~11.2.4",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
@@ -53,6 +49,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "~4.1.5"
   }
 }
