--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "node server.js",
+    "start-local": "ng serve",
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
@@ -28,6 +29,7 @@
     "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
+    "ngx-pagination": "^5.0.0",
     "jquery": "^3.6.0",
     "ngx-socket-io": "3.2.0",
     "path": "^0.12.7",
@@ -53,9 +55,5 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0"
-  },
-  "engines": {
-    "node": "14.16.0",
-    "npm": "6.14.11"
   }
 }
