--- a/package.json
+++ b/package.json
@@ -29,8 +29,9 @@
     "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
-    "ngx-pagination": "^5.0.0",
     "jquery": "^3.6.0",
+    "ngx-color-picker": "^11.0.0",
+    "ngx-pagination": "^5.0.0",
     "ngx-socket-io": "3.2.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
