--- a/angular.json
+++ b/angular.json
@@ -27,10 +27,12 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ 
+            "styles": [
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/particles.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -90,7 +92,7 @@
               "src/favicon.ico",
               "src/assets"
             ],
-            "styles": [ 
+            "styles": [
               "src/styles.scss"
             ],
             "scripts": []
