--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
     "jquery": "^3.6.0",
+    "ngx-bootstrap": "^6.2.0",
     "ngx-color-picker": "^11.0.0",
     "ngx-pagination": "^5.0.0",
     "ngx-socket-io": "3.2.0",
