--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "ngx-bootstrap": "^6.2.0",
     "ngx-color-picker": "^11.0.0",
     "ngx-pagination": "^5.0.0",
-    "ngx-socket-io": "3.2.0",
+    "ngx-socket-io": "^4.0.0",
     "path": "^0.12.7",
     "rxjs": "~6.6.0",
-    "socket.io-client": "^4.0.0",
+    "socket.io-client": "^4.0.2",
     "tslib": "^2.0.0",
     "typescript": "~4.1.5",
     "zone.js": "~0.11.3"
