--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "@types/bootstrap": "^5.0.11",
     "@types/socket.io-client": "^1.4.36",
     "angularx-social-login": "^3.5.4",
