--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "angularx-social-login": "^3.5.4",
     "bootstrap": "^4.6.0",
     "express": "^4.17.1",
+    "html2canvas": "^1.0.0-rc.7",
     "jquery": "^3.6.0",
     "ngx-bootstrap": "^6.2.0",
     "ngx-color-picker": "^11.0.0",
+    "ngx-feedback": "^1.0.0",
     "ngx-pagination": "^5.0.0",
     "ngx-socket-io": "^4.0.0",
     "path": "^0.12.7",
