implementing capacitor storage with async

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@capacitor/angular": "^1.0.3",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^3.1.2",
+    "@capacitor/storage": "^1.0.3",
     "@ionic/angular": "^5.6.13",
     "@swimlane/ngx-charts": "^18.0.1",
     "@swimlane/ngx-datatable": "^19.0.0",
