--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@angular/platform-browser": "~11.2.4",
     "@angular/platform-browser-dynamic": "~11.2.4",
     "@angular/router": "~11.2.4",
+    "@capacitor-community/facebook-login": "^3.1.1",
     "@capacitor/android": "^3.1.2",
     "@capacitor/angular": "^1.0.3",
     "@capacitor/core": "latest",
     "@capacitor/ios": "^3.1.2",
     "@capacitor/storage": "^1.0.3",
+    "@codetrix-studio/capacitor-google-auth": "^3.0.2",
     "@ionic/angular": "^5.6.13",
     "@swimlane/ngx-charts": "^18.0.1",
     "@swimlane/ngx-datatable": "^19.0.0",
